fix code letter-spacing bug

--- a/styles/code-title.less
+++ b/styles/code-title.less
@@ -22,7 +22,7 @@
   margin: 0;
 }
 
-.code-title > code:before, code:after {
+.code-title > code:before code:after {
   letter-spacing: -2rem !important;
 }
 
